--- a/translations/transifex.yml
+++ b/translations/transifex.yml
@@ -4,5 +4,5 @@ git:
     - filter_type: file
       file_format: docx
       source_language: en
-      source_file: translations/en/test_en.txt
-      translation_files_expression: 'translations/<lang>/test_bo.txt'
+      source_file: translations/en/test_en.po
+      translation_files_expression: 'translations/<lang>/test_bo.po'
