--- a/translations/transifex.yml
+++ b/translations/transifex.yml
@@ -1,8 +1,7 @@
-
 git:
   filters:
     - filter_type: file
-      file_format: docx
+      file_format: PO
       source_language: en
-      source_file: translations/en/test_en.po
-      translation_files_expression: 'translations/<lang>/test_bo.po'
+      source_file: translations/en/LC_MESSAGES/messages.po
+      translation_files_expression: 'translations/bo_CN/LC_MESSAGES/messages.po'
