--- a/translations/transifex.yml
+++ b/translations/transifex.yml
@@ -5,3 +5,6 @@ git:
       source_language: en
       source_file: translations/en/LC_MESSAGES/messages.po
       translation_files_expression: 'translations/<lang>/LC_MESSAGES/messages.po'
+
+      source_file: translations/en/LC_MESSAGES/messages_01.po
+      translation_files_expression: 'translations/<lang>/LC_MESSAGES/messages_01.po'
