--- a/translations/transifex.yml
+++ b/translations/transifex.yml
@@ -3,8 +3,5 @@ git:
     - filter_type: file
       file_format: PO
       source_language: en
-      source_file: translations/en/LC_MESSAGES/messages.po
-      translation_files_expression: 'translations/<lang>/LC_MESSAGES/messages.po'
-
-      source_file: translations/en/LC_MESSAGES/messages_01.po
-      translation_files_expression: 'translations/<lang>/LC_MESSAGES/messages_01.po'
+      source_file: translations/en/LC_MESSAGES/*.po
+      translation_files_expression: 'translations/<lang>/LC_MESSAGES/*.po'
