--- a/translations/transifex.yml
+++ b/translations/transifex.yml
@@ -3,13 +3,8 @@ git:
     - filter_type: file
       file_format: PO
       source_language: en
-      source_file: translations/en/LC_MESSAGES/messages.po
-      translation_files_expression: 'translations/<lang>/LC_MESSAGES/messages.po'
+      source_file: translations/en/messages.po
+      translation_files_expression: 'translations/<lang>/messages.po'
 
 
 
-    - filter_type: file
-      file_format: PO
-      source_language: en
-      source_file: translations/en/LC_MESSAGES/messages_01.po
-      translation_files_expression: 'translations/<lang>/LC_MESSAGES/messages_01.po'  
