--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -1,35 +1,7 @@
-# English translations for PROJECT.
-# Copyright (C) 2022 ORGANIZATION
-# This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
-#
-msgid ""
-msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-05-12 23:50+0530\n"
-"PO-Revision-Date: 2022-06-29 16:14+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: en\n"
-"Language-Team: en <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.10.3\n"
+"Log in"
 
-#: app/templates/account/login.html:7
-msgid "Log in"
-msgstr "Log in"
+"Forgot password?"
 
-#: app/templates/account/login.html:22
-msgid "Forgot password?"
-msgstr "Forgot password?"
+"Create an account"
 
-#: app/templates/account/register.html:8
-msgid "Create an account"
-msgstr "Create an account"
-
-#: app/templates/control_lists/contact.html:8
-msgid "Contact control lists administrators"
-msgstr "Contact control lists administrators"
+"Contact control lists administrators"
