po_syntax_change

--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -1,7 +1,9 @@
-"Log in"
 
-"Forgot password?"
 
-"Create an account"
+#: app/templates/account/register.html:8
+msgid "Create an account"
+msgstr "Create an account"
 
-"Contact control lists administrators"
+#: app/templates/control_lists/contact.html:8
+msgid "Contact control lists administrators"
+msgstr "Contact control lists administrators"
