--- a/translations/transifex.yml
+++ b/translations/transifex.yml
@@ -4,5 +4,5 @@ git:
       file_format: PO
       source_file_extension: po
       source_language: en
-      source_file_dir: translations/en/LC_MESSAGES
-      translation_files_expression: 'translations/<lang>/LC_MESSAGES'
+      source_file_dir: translations/en
+      translation_files_expression: 'translations/<lang>'
